Update java-things.md